CSS : Practiced project of layout with the help of Positions

--- a/2_Css/lec10/project.html
+++ b/2_Css/lec10/project.html
@@ -4,49 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Card Design</title>
-    <style>
-      * {
-        margin: 0px;
-        padding: 0px;
-        box-sizing: border-box;
-      }
-
-      .main-contianer {
-        width: 50vw;
-        height: 70vh;
-        border: 2px solid black;
-        border-radius: 5px;
-        position: absolute;
-      }
-
-      .hero-section {
-        position: relative;
-        width: 50vw;
-        height: 50vh;
-      }
-
-      .img-tag {
-        width: 500px;
-        height: 300px;
-        margin: 0px;
-        padding: 0px;
-      }
-
-
-    </style>
+    <link rel="stylesheet" href="./style.css">
   </head>
   <body>
     <div class="main-contianer">
       <div class="hero-section">
-        <img class="img-tag" src="./Colors-Amazon-Logo.jpg" alt="amazon-logo" />
+        <img class="img-tag" src="lake.jpg" alt="amazon-logo" />
       </div>
       <div class="info-section">
         <div class="tags">
-          <span>Amazon</span>
-          <span>India</span>
+          <span class="span-1">Lake</span>
+          <span class="span-2">Nature</span>
         </div>
         <div class="intro-section">
-          <p>
+          <p class="title">Life is good.</p>
+          <p class="info-des">
             Lorem ipsum dolor sit, amet consectetur adipisicing elit. Animi aut
             inventore asperiores vitae vero facere atque quidem repellat odio
             iusto fugiat at ducimus, cumque dicta dolore sequi? Amet, ut
