--- a/2_Css/lec13/index.html
+++ b/2_Css/lec13/index.html
@@ -11,7 +11,7 @@
         <div class="boxes">1</div>
         <div class="boxes">2</div>
         <div class="boxes">3</div>
-        <div class="boxes">4</div>
+        <div class="boxes box-4">4</div>
         <div class="boxes">5</div>
     </div>
 </body>
