added remaining files which were pending

--- a/1_Html/lec6/index.html
+++ b/1_Html/lec6/index.html
@@ -15,7 +15,7 @@
     // Navbar: all the navigations
     <nav></nav>
 
-    //Atricle : all the sponsors, news, links,, blog posts. 
+    //Atricle : all the sponsors, news, links, blog posts. 
     <article></article>
 
     // section: section the part, consists header,footer,nav,articles
